# defer-imports

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  TODO.md  global_output.txt  local_output.txt  pyproject.toml  tox.toml
.github/workflows/: ci.yml  lint.yml  release.yml  test.yml
bench/: bench_samples.py  generate_samples.py  profile_sample.py  profile_sample_global.py  profile_sample_local.py  sample_defer_global.py  sample_defer_local.py  sample_regular.py  sample_slothy.py
benchmark/: __init__.py  all_stdlib_modules.py  bench_defer.py  bench_lazy.py  bench_reg.py  bench_samples.py  bench_slothy.py  generate_samples.py  log_lazy.pstats  log_reg.pstats  log_slothy.pstats  sample_deferred.py  sample_regular.py  sample_slothy.py
scratch/: __init__.py  a.py
src/defer_imports/: __init__.py  __main__.py  _ast_rewrite.py  _bootstrap.py  _comptime.py  _console.py  _core.py  _lazy_load.py  _runtime.py  _typing.py  _typing.pyi  _typing_compat.py  ast_rewrite.py  console.py  lazy_load.py
src/deferred/: __init__.py  __main__.py  _console.py  _core.py  _types.py  _types.pyi  _typing.py  _typing.pyi  _utils.py  _utils.pyi
tests/: __init__.py  conftest.py  sample_deferred.py  sample_stdlib_imports.py  test_annotations.py  test_ast_rewrite.py  test_basic.py  test_defer_imports.py  test_defer_imports_until_use.py  test_deferred.py  test_error.py  test_instrumentation.py  test_integration.py  test_lazy_load.py  test_mixed_import_types.py  test_regression.py  test_typing.py  test_unit.py  util.py
tools/: _dict_replacement.py  generate_samples.py
